--- a/ssd_mobilenet_v2_320x320_coco17_tpu-8.config
+++ b/ssd_mobilenet_v2_320x320_coco17_tpu-8.config
@@ -179,10 +179,10 @@ eval_config {
   use_moving_averages: false
 }
 eval_input_reader {
-  label_map_path: "/content/train/outfits_label_map.pbtxt"
+  label_map_path: "/content/train/fashion_label_map.pbtxt"
   shuffle: false
   num_epochs: 50
   tf_record_input_reader {
-    input_path: "/content/train/outfits.tfrecord"
+    input_path: "/content/train/fashion.tfrecord"
   }
 }
